[package]
name = "avn-node-parachain"
description = "A Cumulus FRAME-based Substrate Node compatible with the AvN parachain"
license = "GPL-3.0"
build = "build.rs"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "avn-parachain-collator"
path = "src/main.rs"


[dependencies]
clap = { features = ["derive"], workspace = true }
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
codec = { workspace = true, default-features = true }
hex-literal = { workspace = true, default-features = true }
hex = { workspace = true, default-features = true }
serde_json = { version = "1.0.111", features = ["arbitrary_precision"] }
cfg-if = "0.1"
polkadot-sdk = { workspace = true, features = ["node"] }

# Local
runtime-common.workspace = true
avn-parachain-runtime.workspace = true
avn-test-runtime = { workspace = true, optional = true }

# AvN dependencies
sp-authority-discovery = { default-features = true, workspace = true }
pallet-im-online = { default-features = true, workspace = true }
sp-avn-common = { default-features = true, workspace = true }

# AvN
external-service.workspace = true
pallet-eth-bridge = { default-features = true, workspace = true }
pallet-eth-bridge-runtime-api = { default-features = true, workspace = true }
pallet-avn = { default-features = true, workspace = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"log/std",
	"avn-parachain-runtime/std",
	"avn-test-runtime?/std",
	"polkadot-sdk/std",
]

runtime-benchmarks = [
    "avn-parachain-runtime/runtime-benchmarks",
    "avn-test-runtime?/runtime-benchmarks",
]

try-runtime = [
	"polkadot-sdk/try-runtime",
    "avn-parachain-runtime/try-runtime",
    "avn-test-runtime?/try-runtime",
]

[dev-dependencies]
tempfile = "3.1.0"
sp-version = { default-features = true, workspace = true }
